# NeedleInArXiv

./: .gitignore  README.md
backend and frontend/: .dockerignore  .env.demo  .env.example  .env.precomputed.example  .gitignore  Dockerfile  Makefile  README.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend and frontend/data/: README.md
backend and frontend/docs/: architecture.md  data_audit.md  defense_notes.md  experiment_protocol.md  hardware.md
backend and frontend/embeddings/: README.md
backend and frontend/external_indexes/: README.md
backend and frontend/index/: README.md
backend and frontend/index/demo_bm25/: idf.npy  matrix.npz  metadata.json  sources.npy  vocabulary.json
backend and frontend/index/demo_qdrant/: meta.json
backend and frontend/outputs/: semantic_search_defense.pptx  semantic_search_defense.pptx.inspect.ndjson
backend and frontend/scripts/: benchmark_indexes.py  build_bm25.py  build_splade.py  encode_corpus.py  evaluate.py  generate_demo_assets.py  index_embeddings.py  pca_analysis.py  prepare_arxiv.py  quantize_embeddings.py  validate_inputs.py  validate_precomputed_indexes.py
backend and frontend/search/: __init__.py  config.py  data.py  encoders.py  engine.py  fusion.py  metrics.py  precomputed.py  qdrant_store.py  rerankers.py  splade.py
backend and frontend/service/: main.py  schemas.py
backend and frontend/tests/: test_bm25.py  test_data.py  test_engine.py  test_fusion.py  test_metrics.py  test_qdrant_integration.py  test_splade.py
notebooks/: EDA.ipynb  analyze.ipynb  (+9 more)
(+5 files in other folders)
